Finish strings-en

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -55,7 +55,7 @@
     <string name="text_setting_content_7">Using to development and learning</string>
     <string name="txt_web">Website:NONE!Sad</string>
     <string name="text_about_email">Email: xxlangdou@gmail.com</string>
-    <string name="txt_xiaoyou">Hello,I'm your smart butler!</string>
+    <string name="txt_xiaoyou">Hello,I am your smart butler!</string>
     <string name="text_too_long">Too Long!</string>
     <string name="edit_can_not_be_null">Can not be empty!</string>
     <string name="txt_balabala">balabala</string>
