--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -117,4 +117,5 @@
     <string name="txt_right">Right</string>
     <string name="txt_news_info">News info</string>
     <string name="text_registering">Registering..</string>
+    <string name="txt_resetting">Resetting</string>
 </resources>
