--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -96,4 +96,5 @@
     <string name="text_right">右边</string>
     <string name="txt_news_info">新闻详情</string>
     <string name="text_registering">正在注册..</string>
+    <string name="txt_resetting">正在重置..</string>
 </resources>
