--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,4 +117,5 @@
     <string name="txt_right">右边</string>
     <string name="txt_news_info">新闻详情</string>
     <string name="text_registering">正在注册..</string>
+    <string name="txt_resetting">正在重置..</string>
 </resources>
