--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -118,4 +118,5 @@
     <string name="txt_news_info">News info</string>
     <string name="text_registering">Registering..</string>
     <string name="txt_resetting">Resetting</string>
+    <string name="txt_now_version">Version:</string>
 </resources>
