--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -32,7 +32,7 @@
     <string name="text_setting_title_6">我的位置</string>
     <string name="text_setting_content_6">时刻掌握自身位置</string>
     <string name="text_setting_title_7">关于软件</string>
-    <string name="text_setting_content_7">开发学习使用，欢迎探讨xxlangdou@gmail.com</string>
+    <string name="text_setting_content_7">开发学习使用，欢迎探讨!</string>
     <string name="txt_web">官网:暂无</string>
     <string name="text_about_email">Email: xxlangdou@gmail.com</string>
     <string name="txt_xiaoyou">你好，我是小优</string>
@@ -97,4 +97,5 @@
     <string name="txt_news_info">新闻详情</string>
     <string name="text_registering">正在注册..</string>
     <string name="txt_resetting">正在重置..</string>
+    <string name="txt_now_version">当前版本:</string>
 </resources>
