--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -118,4 +118,5 @@
     <string name="txt_news_info">新闻详情</string>
     <string name="text_registering">正在注册..</string>
     <string name="txt_resetting">正在重置..</string>
+    <string name="txt_now_version">当前版本:</string>
 </resources>
